# camera_aravis

./: CMakeLists.txt
camera_aravis/: package.xml
camera_aravis/cfg/cpp/camera_aravis/: CameraAravisConfig.h
camera_aravis/config/: flir_a400.yaml
camera_aravis/launch/: aravis.launch
camera_aravis/scripts/: install-aravis.sh
camera_aravis/src/camera_aravis/cfg/: CameraAravisConfig.py
camera_aravis_description/: CMakeLists.txt  package.xml
camera_aravis_description/urdf/: flir_a400.urdf.xacro
launch/: aravis.launch
urdf/: flir_a400.urdf.xacro
